--- a/Operon/Rockhopper.ipynb
+++ b/Operon/Rockhopper.ipynb
@@ -20,7 +20,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ref = 'ann/mtuTemp/'\n",
+    "ref = '../data/ann/mtuTemp/'\n",
     "fastq = '../data/fastq/'\n",
     "result1 = 'Results_cond0.1_6'\n",
     "result2 = 'Results_cond50_6'\n",
